# agency-backups

./: .gitignore  AGENTS.md  ARCHIVE.md  CLAUDE.md  CODEX.md  FOLDERS.md  FRUSTRATED.md  MAINTENANCE.md  PRE_COMMIT.md  PROMPT.md  README.md  RESEARCH.md  ReAct_trace.md  SKILLS.md  SPEC.md  TASK.md  install.sh  mock_search.py  post-synthesis-reflection.md  test_spec.py
.claude/: readme.md  settings.json
.claude-plugin/: plugin.json  readme.md
.devin/: wiki.json
.githooks/: pre-commit
Agency-System/: Agency Frontend v2.html  Agency Frontend v3.html  Agency Frontend.html
Agency-System/backend/: Makefile  README.md  TODO.md  pyproject.toml  requirements.txt
Agency-System/backend/agency_backend/: __init__.py  __main__.py  app.py  config.py  mcp_server.py  parsers.py  runtime.py  state.py  watcher.py
Agency-System/backend/runtime/: README.md  agents.jsonl  chat.jsonl
Agency-System/backend/tests/: conftest.py  test_app.py  test_parsers.py  test_state.py
decisions/: 0001-mandatory-session-bootstrap.md  0002-operational-folder-topology.md  0003-frontmatter-source-of-truth.md  0004-yaml-depth-one-constraint.md  0005-repair-authority-tiers.md  0006-agency-system-prototype-exemption.md  0007-skill-bundles-tools-frontmatter.md  0008-narrative-skills-status-quo.md  0009-root-spec-no-consolidation.md  0010-external-skill-corpora-import.md  0011-archive-move-default.md  0011-codex-entrypoint-and-platform-note.md  0011-external-skill-corpora-import.md  0012-skill-source-validator-diagnostic-codes.md  readme.md
kohaerenz-protokoll-novel-writing-incubator/: README.md
(+2081 files in other folders)
